# cmake-project-template

./: CMakeLists.txt
src/: main.cpp
